--- a/HYNewNest/Features(主代码)/MeComponent/VoucherComponent/View/BYVocherTVCell.xib
+++ b/HYNewNest/Features(主代码)/MeComponent/VoucherComponent/View/BYVocherTVCell.xib
@@ -10,15 +10,15 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" rowHeight="210" id="KGk-i7-Jjw" customClass="BYVocherTVCell">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="247"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" rowHeight="208" id="KGk-i7-Jjw" customClass="BYVocherTVCell">
+            <rect key="frame" x="0.0" y="0.0" width="375" height="245"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="375" height="247"/>
+                <rect key="frame" x="0.0" y="0.0" width="375" height="245"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Jmu-9P-qyo">
-                        <rect key="frame" x="15" y="15" width="345" height="232"/>
+                        <rect key="frame" x="15" y="15" width="345" height="230"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="使用中" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PsW-nU-lS9">
                                 <rect key="frame" x="284" y="16.5" width="46" height="20"/>
@@ -119,13 +119,13 @@
                                 </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Tzq-hY-h0x">
-                                <rect key="frame" x="15" y="224" width="315" height="3"/>
+                                <rect key="frame" x="15" y="224" width="315" height="1"/>
                                 <fontDescription key="fontDescription" type="system" weight="light" pointSize="14"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="E3y-VV-86r">
-                                <rect key="frame" x="0.0" y="227" width="330" height="0.0"/>
+                                <rect key="frame" x="0.0" y="225" width="330" height="0.0"/>
                                 <constraints>
                                     <constraint firstAttribute="height" id="bRh-pb-Pvi"/>
                                 </constraints>
@@ -226,7 +226,6 @@
                             <constraint firstItem="JRh-2s-TFH" firstAttribute="top" secondItem="aKL-qF-0zL" secondAttribute="bottom" constant="10" id="pro-4i-otS"/>
                             <constraint firstItem="R0g-Wq-Ymw" firstAttribute="leading" secondItem="zMI-5X-ygV" secondAttribute="trailing" id="smg-uw-PmI"/>
                             <constraint firstItem="R0g-Wq-Ymw" firstAttribute="centerY" secondItem="5IN-Nc-RHI" secondAttribute="centerY" id="t1J-Cf-EQW"/>
-                            <constraint firstItem="Dsj-vc-AW6" firstAttribute="top" secondItem="Jmu-9P-qyo" secondAttribute="top" constant="14" id="td9-sJ-bga"/>
                             <constraint firstItem="aKL-qF-0zL" firstAttribute="trailing" secondItem="PsW-nU-lS9" secondAttribute="trailing" id="vDe-DG-MCe"/>
                             <constraint firstAttribute="trailing" secondItem="E3y-VV-86r" secondAttribute="trailing" constant="15" id="xK1-Am-jr3"/>
                         </constraints>
@@ -261,7 +260,7 @@
                 <outlet property="totalAmountLb" destination="JRh-2s-TFH" id="j1f-7m-mWo"/>
                 <outlet property="totalStreamLb" destination="NdI-Eo-8Ww" id="L7q-1R-Dh5"/>
             </connections>
-            <point key="canvasLocation" x="129.71014492753625" y="-90.736607142857139"/>
+            <point key="canvasLocation" x="129.71014492753625" y="-91.40625"/>
         </tableViewCell>
     </objects>
     <resources>
