--- a/HYNewNest/Features(主代码)/NewUsrMissionComponent/Controller/BYNewUsrMissionVC.xib
+++ b/HYNewNest/Features(主代码)/NewUsrMissionComponent/Controller/BYNewUsrMissionVC.xib
@@ -15,6 +15,8 @@
                 <outlet property="cumulate4dayIconLeadingCons" destination="TbV-3X-T9R" id="gMB-NI-zyV"/>
                 <outlet property="cumulate7Btn" destination="a1H-zu-5hs" id="9fp-hz-NBf"/>
                 <outlet property="cumulate7daysBg" destination="9oz-UE-NiZ" id="D39-bK-ltW"/>
+                <outlet property="cumulateAmount3" destination="W0g-Tb-YSM" id="gX1-Kv-8IR"/>
+                <outlet property="cumulateAmount7" destination="GgB-L8-dbQ" id="45S-QC-fyq"/>
                 <outlet property="limitTimeTableView" destination="c3I-Db-51t" id="hKh-md-u0e"/>
                 <outlet property="limtTimeCuntDwnLb" destination="JzB-i6-Qul" id="Xjn-ol-wYH"/>
                 <outlet property="oneViewWidth" destination="HDR-Zd-WPH" id="vAI-qK-7l8"/>
@@ -31,10 +33,10 @@
                 <outletCollection property="daysLbCollect" destination="ysB-0G-fQy" id="i4f-uo-6JO"/>
                 <outletCollection property="cumulate3daysIcons" destination="HDS-dU-qmo" id="ojZ-DJ-wOz"/>
                 <outletCollection property="cumulate3daysIcons" destination="ftX-DZ-fTH" id="Kq4-cA-xmW"/>
-                <outletCollection property="cumulate3daysIcons" destination="hxw-kp-nMQ" id="qkN-Va-CPA"/>
-                <outletCollection property="cumulate3daysIcons" destination="EY9-Tc-ksR" id="U1f-Da-JkE"/>
-                <outletCollection property="cumulate3daysIcons" destination="zpi-eR-hMM" id="sYI-ok-2fv"/>
-                <outletCollection property="cumulate3daysIcons" destination="jug-SY-Pe9" id="UaF-6B-m6s"/>
+                <outletCollection property="cumulate7daysIcons" destination="hxw-kp-nMQ" id="lCh-zN-Rad"/>
+                <outletCollection property="cumulate7daysIcons" destination="EY9-Tc-ksR" id="aIF-qM-LZa"/>
+                <outletCollection property="cumulate7daysIcons" destination="zpi-eR-hMM" id="6ax-31-Uuv"/>
+                <outletCollection property="cumulate7daysIcons" destination="jug-SY-Pe9" id="wnb-yz-rI8"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -82,7 +84,7 @@
                                             <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="3" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="W0g-Tb-YSM">
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="W0g-Tb-YSM">
                                             <rect key="frame" x="159" y="123" width="16.5" height="40"/>
                                             <fontDescription key="fontDescription" name="DINAlternate-Bold" family="DIN Alternate" pointSize="34"/>
                                             <color key="textColor" red="0.070588235294117646" green="0.72941176470588232" blue="0.85098039215686272" alpha="1" colorSpace="calibratedRGB"/>
@@ -94,7 +96,7 @@
                                             <color key="textColor" red="0.070588235289999995" green="0.72941176470000002" blue="0.85098039219999999" alpha="1" colorSpace="calibratedRGB"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VUq-pb-BAU" customClass="CNTwoStatusBtn">
+                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VUq-pb-BAU" customClass="BYThreeStatusBtn">
                                             <rect key="frame" x="117" y="183" width="150" height="40"/>
                                             <constraints>
                                                 <constraint firstAttribute="width" constant="150" id="D5I-oB-jWN"/>
@@ -179,7 +181,7 @@
                                             <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="5" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GgB-L8-dbQ">
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GgB-L8-dbQ">
                                             <rect key="frame" x="159" y="123" width="16.5" height="40"/>
                                             <fontDescription key="fontDescription" name="DINAlternate-Bold" family="DIN Alternate" pointSize="34"/>
                                             <color key="textColor" red="0.070588235289999995" green="0.72941176470000002" blue="0.85098039219999999" alpha="1" colorSpace="calibratedRGB"/>
@@ -191,7 +193,7 @@
                                             <color key="textColor" red="0.070588235289999995" green="0.72941176470000002" blue="0.85098039219999999" alpha="1" colorSpace="calibratedRGB"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="a1H-zu-5hs" customClass="CNTwoStatusBtn">
+                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="a1H-zu-5hs" customClass="BYThreeStatusBtn">
                                             <rect key="frame" x="117" y="183" width="150" height="40"/>
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="40" id="9zS-9t-0Ei"/>
