--- a/HYNewNest/Features(主代码)/NewUsrMissionComponent/View/BYNewUsrMissionCell.xib
+++ b/HYNewNest/Features(主代码)/NewUsrMissionComponent/View/BYNewUsrMissionCell.xib
@@ -38,27 +38,25 @@
                                 <color key="textColor" red="0.074509803920000006" green="0.71764705880000002" blue="0.83137254900000002" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="绑定手机号" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="51K-dy-dPp">
-                                <rect key="frame" x="15" y="38" width="61.5" height="14.5"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="绑定手机号" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="51K-dy-dPp">
+                                <rect key="frame" x="15" y="38" width="110" height="14.5"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="110" id="7FO-du-97c"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                 <color key="textColor" red="1" green="1" blue="1" alpha="0.49888073220000001" colorSpace="custom" customColorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="iU4-qB-S2G" customClass="CNTwoStatusBtn">
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="iU4-qB-S2G" customClass="BYThreeStatusBtn">
                                 <rect key="frame" x="273" y="21" width="90" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="90" id="aB6-It-v6A"/>
                                     <constraint firstAttribute="height" constant="30" id="gIv-ZN-tCh"/>
                                 </constraints>
                                 <state key="normal" title="领取"/>
-                                <userDefinedRuntimeAttributes>
-                                    <userDefinedRuntimeAttribute type="number" keyPath="txtSize">
-                                        <real key="value" value="14"/>
-                                    </userDefinedRuntimeAttribute>
-                                    <userDefinedRuntimeAttribute type="number" keyPath="ibStatus">
-                                        <integer key="value" value="1"/>
-                                    </userDefinedRuntimeAttribute>
-                                </userDefinedRuntimeAttributes>
+                                <connections>
+                                    <action selector="didTapBtn:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="bTW-Ar-2U0"/>
+                                </connections>
                             </button>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="_limited time" translatesAutoresizingMaskIntoConstraints="NO" id="lEI-gq-pYg">
                                 <rect key="frame" x="320" y="-21" width="84" height="84"/>
@@ -107,7 +105,7 @@
                 <outlet property="tagImgv" destination="lEI-gq-pYg" id="K2h-p5-LMV"/>
                 <outlet property="titleLb" destination="bEz-pR-68g" id="oKe-PT-gic"/>
             </connections>
-            <point key="canvasLocation" x="96.376811594202906" y="168.08035714285714"/>
+            <point key="canvasLocation" x="-20" y="61"/>
         </tableViewCell>
     </objects>
     <resources>
